# KDD-LOAM

./: CMakeLists.txt  LICENSE  README.md  odometry.cpp  package.xml
TCKDD/: evaluate_3dmatch.py  evaluate_3dmatch_varying_fmr.py  evaluate_kitti.py  inference_3dmatch.py  inference_kitti.py  metrics.py  train_3dmatch.py  train_kitti.py  trainer.py
TCKDD/datasets/: dataloader.py  kitti.py  match3d.py
TCKDD/engine/: detector.py  loss.py
TCKDD/models/: kpfcnn.py  module.py
TCKDD/models/kernels/: kernel_points.py
include/aloam_velodyne/: common.h  kdd_loam.h  ransac.h
include/kddloam_velodyne/: AdaptiveThreshold.hpp  HybridICP.hpp  KddLOAM.hpp  VoxelHashMap.hpp  common.h  preprocessing.hpp  registration.hpp
launch/: aloam_velodyne_HDL_64.launch  kddloam.launch  kddloam_velodyne_HDL_64.launch  kitti_helper.launch  kitti_publisher.launch  odom.launch  render.launch
rviz_cfg/: comp.rviz  demo.rviz  kddloam.rviz  kddloam_velodyne.rviz  odom.rviz  rviz.rviz  scan.rviz
scripts/: keypointDescription.py  mapping.py  metrics.py  odometry.py  voxelfilter.py
scripts/cpp_extensions/cpp_subsampling/: setup.py
scripts/datasets/: dataloader.py  kitti.py
scripts/datasets/cpp_extensions/cpp_neighbors/: setup.py
scripts/kernels/: kernel_points.py
scripts/models/: kpfcnn.py
scripts/utils/: VoxelFilter.py  registration.py
src/: VoxelHashMap.cpp  curvatureEstimate.cpp  global_mapping.cpp  kddOdometry.cpp  kittiHelper.cpp  kittiPublisher.cpp  laserMapping.cpp  laserOdometry.cpp  laserRender.cpp  lidarFactor.hpp  local_mapping.cpp  mapping.cpp  odometry.cpp  ransac.cpp  savePath.cpp  scanRegistration.cpp  subsampling.hpp  voxelGridSampling.cpp
utils/: precompute.py
